--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "james.xue/login-captcha",
+    "name": "jianhuawang/login-captcha",
     "description": "laravel-admin 登录验证码",
     "type": "library",
     "keywords": ["laravel-admin", "extension", "login-captcha"],
-    "homepage": "https://github.com/xiaoxuan6/login-captcha",
+    "homepage": "https://github.com/jianhuawang/login-captcha",
     "license": "MIT",
     "authors": [
         {
-            "name": "xiaoxuan6",
-            "email": "1527736751@qq.com"
+            "name": "wangjianhua",
+            "email": "610304002@qq.com"
         }
     ],
     "require": {
